# package_cookiecutter

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: hello_world.yml  test.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: context.yaml  test_project_generation.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject copy.toml  pyproject.toml
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
{{ cookiecutter.project_slug }}/.github/: pull_request_template.md
{{ cookiecutter.project_slug }}/.github/actions/poetry/: action.yml
{{ cookiecutter.project_slug }}/.github/workflows/: code_quality.yml  docs.yml  draft.yml  release.yml  tests.yml  tests_gpu.yml
{{ cookiecutter.project_slug }}/docs/: README.md  api.md  index.md
{{ cookiecutter.project_slug }}/docs/notebooks/: Untitled7.ipynb  demo.ipynb
{{ cookiecutter.project_slug }}/src/{{cookiecutter.package_name}}/: __init__.py  main.py
{{ cookiecutter.project_slug }}/tests/unit/: conftest.py  test_main.py
{{cookiecutter.project_name}}/: Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  enviroment.yml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/.github/workflow/: release.yml
{{cookiecutter.project_name}}/.github/workflows/: docs.yml  release.yml  tests.yml
{{cookiecutter.project_name}}/docs/: README.md  index.md
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: main.py
{{cookiecutter.project_name}}/tests/unit/: test_main.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  MANIFEST.in  Makefile  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflow/: docs.yml  tests.yml
