[tool.poetry]
name = "cookiecutter-DS"
version = "1.0.0"
description = "A cookiecutter template for creating a DS python package"
authors = ["Riksarkivet"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "*"
cruft = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pre-commit = "^3.6.0"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
ignore = ["C901", "E501", "E741", "W605", "F401"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["{{cookiecutter.package_name}}"]
