[tool.poetry]
authors = ["Riksarkivet"]
description = "A cookiecutter template for creating a DS python package"
license = "MIT"
name = "cookiecutter-DS"
version = "1.0.0"

[tool.poetry.dependencies]
cookiecutter = "*"
cruft = "*"
python = "^3.10"
rich = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "*"
ruff = "*"
toml = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
ignore = ["C901", "E501", "E741", "W605", "F401"]
line-length = 119
select = ["C", "E", "F", "I", "W"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
known-first-party = ["{{cookiecutter.package_name}}"]
lines-after-imports = 2
