[tool.poetry]
authors = ["Riksarkivet"]
description = "A cookiecutter template for creating a DS python package"
license = "MIT"
name = "cookiecutter-DS"
version = "1.0.0"

[tool.poetry.dependencies]
cookiecutter = "*"
cruft = "*"
pyaml = "*"
python = "^3.10"
rich = "*"
toml = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "*"
ruff = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 119
lint.ignore = ["C901", "E501", "E741", "W605", "F401"]
lint.select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
""
"__init__.py" = ["E402", "F401", "F403", "F811"]
