[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    "{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>",
]
license = "{{cookiecutter.LICENSE}}" 
readme = "README.md"

documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_slug }}"
homepage = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_slug }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

classifiers = [
  "Development Status :: 4 - Beta", 
  "Intended Audience :: Developers/Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: {{ cookiecutter.python_interpreter }}",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "{{ cookiecutter.package_name }}", from = "src" }
]

[tool.poetry.dependencies]
python = ">={{ cookiecutter.python_interpreter }}, <4.0"
pandas =  "*"

[tool.poetry.group.test.dependencies]
black = "*"
importlib-metadata = "==4.11.*"
python-dotenv = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
coverage = "*"
ruff = "*"
isort = "*"

{%- if cookiecutter.include_docs_folder == "y" -%}

{%- else -%}
[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocstrings = {version = ">=0.20", extras = ["python"]}
mkdocs-material = "*"
pymdown-extensions = "*"
mkdocs-jupyter = "*"
{% endif %}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = """\
    --cov {{cookiecutter.package_name}} \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""
testpaths = ["tests/unit"]


[tool.coverage.report]
fail_under = 90
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 119
target-version = ['py{{ cookiecutter.python_interpreter|replace(".", "") }}']

[tool.ruff]
ignore = ["C901", "E501", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["{{cookiecutter.package_name}}"]
