[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-v --cov={{cookiecutter.package_name}}"
testpaths = ["tests/unit"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 119
target-version = ['py39'] 

[tool.ruff]

# https://www.flake8rules.com/
# Things to ignore:
#   E203: conflicts with black
#   E501: conflicts with black
#   W601: has_key() deprecated (false positives)
#   E402: module level import not at top of file
#   B006: use of mutable defaults in function signatures
#   B007: Loop control variable not used within the loop body.
#   B011: Don't use assert False
#   B023: Function definition does not bind loop variable
#   E741: Ambiguous variable name
#   W503: Line break occurred before a binary operator 
#   W605: Invalid escape sequence 'x' --> best practice: regex = r'\.png$'
#   E711: Comparison to None should be 'if cond is not None:'
#   E712: Comparison to False should be 'if cond is not False:'

ignore = ["C901", "E501", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["{{cookiecutter.package_name}}"]

# for .vscode setting.json
# {
#     "python.formatting.provider": "black",
#     "python.formatting.blackArgs": ["--line-length", "150"],
#     "python.linting.enabled": true,
#     "python.linting.flake8Enabled": true,
#     "python.linting.flake8Args": [
#         "--max-line-length=150",
#         "--ignore=E203,E501,W601,E402,B006,B007,B011,B023,E741,W503,E711,E712",
#     ],
# }